2011-11-03  Sergio Martin <sergio.martin@artica.es>

	* include/functions_calendar.php: Fixed monthly calendar
	in pdf integration

2011-11-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Added constant with the id
	of the group ALL

2011-11-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php
	operation/user_report/report_monthly.php: Added
	search parameter to user visible function and
	search filter and pagination to monthly view 
	in users management.

2011-11-02  Sergio Martin <sergio.martin@artica.es>

	* operation/download/browse.php: Fixed show
	only not included files in the combo when
	create a file release

2011-11-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_form.php: Fixed some bugs
	in select of categories

	* operation/download/browse.php: Added quick 
	file uploader to file releases creator

	* godmode/setup/filemgr.php: Clean code

2011-10-31  Vanessa Gil <vgil@artica.es>

	* godmode/usuarios/import_from_csv.php: Added help to
	import users from csv file.
	
2011-10-29  Sancho Lerena <slerena@artica.es>

	* operation/projects/project_detail.php,
	godmode/usuarios/configurar_usuarios.php: Small cosmetic
	changes and user contextual help.

2011-10-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_form.php
	opeoration/download/browse.php: Fixed errors and 
	clean code in file releases view

	* operation/projects/task_detail.php: Commited some 
	missed code in last commit

2011-10-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tasks.php
	operation/projects/task_detail.php
	operation/users/user_spare_workunit.php: Fixed auto-update
	percentage completion on tasks when add spare workunit or
	change task total hours

2011-10-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php: Changed deprecated 
	function split by explode

	* operation/projects/project.php: Fixed a bug when create
	a project without specify the owner
