@@ -67,7 +67,7 @@ class PDFTranslator {
             $myfont = $matches[1];
         else
             $myfont = "Default";
-
+		
         if ($myfont != "Default"){
 		    $html2 = '<style>
                 body, tbody, th, td, h1, h2, h3, h4, h5, h6 {
