@@ -52,6 +52,12 @@ include "include/functions_graph.php";
 require_once ('include/functions_html.php');
 require_once ('include/functions_db.php');
 
+if($pdf_output == 1) {
+	$ttl = 2;
+}
+else {
+	$ttl = 1;
+}
 $user_id = get_parameter ('user_id', $config["id_user"]);
 
 if (($user_id != $config["id_user"]) AND (!give_acl ($config["id_user"], 0, "IM")) AND (!give_acl 
@@ -123,12 +129,13 @@ if ($user_id == "") {
 	echo "</h3>";
 } else {
 	echo "<h3>".__("Project report")."</h3>";
-	echo '<table width="90%" class="listing">';
-	echo "<th>".__('Project');
-	echo "<th>".__('User hours');
-	echo "<th>".__('Project total');
-	echo "<th>".__('%');
-
+	echo '<table width="90%" class="listing"><tr>';
+	echo "<th>".__('Project')."</th>";
+	echo "<th>".__('User hours')."</th>";
+	echo "<th>".__('Project total')."</th>";
+	echo "<th>".__('%')."</th>";
+	echo "</tr>";
+	
 	$sql = sprintf ('SELECT tproject.id as id, tproject.name as name, SUM(tworkunit.duration) AS sum
 		FROM tproject, ttask, tworkunit_task, tworkunit
 		WHERE tworkunit.id_user = "%s"
@@ -152,17 +159,18 @@ if ($user_id == "") {
 			echo '<a href="index.php?sec=projects&sec2=operation/projects/task&id_project='.$project['id'].'">';
 			echo '<strong>'.$project['name'].'</strong>';
 			echo "</a>";
-			echo "<td>";
+			echo "</td><td>";
 			echo $project['sum'];
 			$total_time += $project['sum'];
-			echo "<td>";	
+			echo "</td><td>";	
 			echo $total_project;
 			$total_global  += $total_project;
-			echo "<td>";
+			echo "</td><td>";
 			if ($total_project > 0)
 				echo format_numeric ($project['sum'] / ($total_project / 100) )."%";
 			else
 				echo '0%';
+			echo "</td></tr>";
 			
 			$sql = sprintf ('SELECT ttask.id as id, ttask.name as name, SUM(tworkunit.duration) as sum
 				FROM tproject, ttask, tworkunit_task, tworkunit
@@ -186,36 +194,37 @@ if ($user_id == "") {
 
 					echo $task['name'];
 					echo "</a>";
-					echo "<td>";
+					echo "</td><td>";
 					echo $task['sum'];
-					echo "<td>";	
+					echo "</td><td>";	
 					echo $total_task;
-					echo "<td>";
+					echo "</td><td>";
 					if ($total_task > 0)
 						echo format_numeric ($task['sum'] / ($total_task / 100))."%";
 					else
 						echo '0%';
+					echo "</td></tr>";
 				}
 			}
 		}
 	}
 	echo "<tr style='border-top: 2px solid #ccc'>";
-	echo "<td><b>".__("Totals")."</b>";
+	echo "<td><b>".__("Totals")."</b></td>";
 	echo "<td colspan=3>";
 	echo $total_time. " (". get_working_days ($total_time). " ".__("Working days").")";
 	echo "&nbsp;&nbsp;&nbsp; $total_global (". get_working_days ($total_global). " ".__("Working days").")";
 
-	echo "</table>";
+	echo "</td></tr></table>";
 
-if ($total_time > 0){
-	echo "<h3>". __("Project graph report")."</h3>";
-	echo graph_workunit_user (800, 350, $user_id, $start_date, $end_date, 1);
-	echo "<br><br>";
-}
+	if ($total_time > 0){
+		echo "<h3>". __("Project graph report")."</h3>";
+		echo graph_workunit_user (800, 350, $user_id, $start_date, $end_date, $ttl);
+		echo "<br><br>";
+	}
 
-// Incident report
+	// Incident report
 
-echo "<h3>".__("Incident report")."</h3>";
+	echo "<h3>".__("Incident report")."</h3>";
 
 	$sql = sprintf ('SELECT tincidencia.score as score, tincidencia.id_incidencia as iid, tincidencia.estado as istatus, tincidencia.titulo as title, tincidencia.id_grupo as id_group, tincidencia.id_creator as creator, tincidencia.id_usuario as owner, tincidencia.inicio as date_start, tincidencia.cierre as date_end, SUM(tworkunit.duration) as `suma`  
 		FROM tincidencia, tworkunit_incident, tworkunit
@@ -229,71 +238,70 @@ echo "<h3>".__("Incident report")."</h3>";
 
 	$incidencias = get_db_all_rows_sql ($sql);
 
-	if (sizeof($incidencias) == 1){
+	if (sizeof($incidencias) == 0){
 		echo "<h3>";
 		echo __("There is no data to show");
 		echo "</h3>";
 	} else {
 			
-		echo '<table width="90%" class="listing">';
-		echo "<th>".__('Incident');
-		echo "<th>".__('Group');
-		echo "<th>".__('Creator')."<br>".__('Owner');
-		echo "<th>".__('Status');
-		echo "<th>".__('Dates');
-		echo "<th>".__('User hours');
-		echo "<th>".__('Total hours');
-        echo "<th>".__('Score');
-
+		echo '<table width="90%" class="listing"><tr>';
+		echo "<th>".__('Incident')."</th>";
+		echo "<th>".__('Group')."</th>";
+		echo "<th>".__('Creator')."<br>".__('Owner')."</th>";
+		echo "<th>".__('Status')."</th>";
+		echo "<th>".__('Dates')."</th>";
+		echo "<th>".__('User hours')."</th>";
+		echo "<th>".__('Total hours')."</th>";
+		echo "<th>".__('Score')."</th>";
+		echo "</tr>";
 		$incident_totals = 0;
 		$incident_user = 0;
-        $incident_graph = array();
+		$incident_graph = array();
 
 		if ($incidencias) {
 			foreach ($incidencias as $incident) {
 				// $total_project = get_project_workunit_hours ($project['id'], 0, $start_date, $end_date);
 	
-                $incident_graph[$incident["title"]] = $incident["suma"];
+				$incident_graph[$incident["title"]] = $incident["suma"];
 
 				echo "<tr>";
-				echo "<td>".$incident["title"];
-				echo "<td>".dame_grupo($incident["id_group"]);
-				echo "<td class=f9>".$incident["creator"]."<br>".$incident["owner"];
+				echo "<td>".$incident["title"]."</td>";
+				echo "<td>".dame_grupo($incident["id_group"])."</td>";
+				echo "<td class=f9>".$incident["creator"]."<br>".$incident["owner"]."</td>";
 				$status = get_indicent_status();
-				echo "<td>".$status[$incident["istatus"]];
-				echo "<td class=f9>".substr($incident["date_start"],0,11). " <br>" .substr($incident["date_end"],0,11);
-				echo "<td>".$incident["suma"];
+				echo "<td>".$status[$incident["istatus"]]."</td>";
+				echo "<td class=f9>".substr($incident["date_start"],0,11). " <br>" .substr($incident["date_end"],0,11)."</td>";
+				echo "<td>".$incident["suma"]."</td>";
 				$incident_user  += $incident["suma"];
 				$this_incident = get_incident_workunit_hours($incident["iid"]);
-				echo "<td>". $this_incident;
+				echo "<td>". $this_incident."</td>";
 				$incident_totals +=  $this_incident;
-                echo "<td>";
-                if (give_acl ($config["id_user"], 0, "IM"))
-                    echo $incident["score"];
-                else
-                    echo "N/A";
-	
+				echo "<td>";
+				if (give_acl ($config["id_user"], 0, "IM"))
+					echo $incident["score"];
+				else
+					echo "N/A";
+				echo "</td></tr>";
 			}
-        	echo "<tr style='border-top: 2px solid #ccc'>";
-			echo "<td><b>".__("Totals")."</b>";
+			echo "<tr style='border-top: 2px solid #ccc'>";
+			echo "<td><b>".__("Totals")."</b></td>";
 			echo "<td colspan=7>";
 			echo dame_nombre_real ($user_id). ": ". $incident_user. " ( ". get_working_days ($incident_user). " ".__("Working days"). ")";
 
 			echo "&nbsp;&nbsp;&nbsp;".__('Total'). " : ". $incident_totals." ( ". get_working_days ($incident_totals). " ".__("Working days").")";
-
-            
+			echo "</td></tr>";
+			
 		}
 		echo "</table>";
+		
+		if ($incident_graph){
+			echo "<h3>". __("Incident graph report")."</h3>";
+			echo "<div>";
+			echo pie3d_graph ($config['flash_charts'], $incident_graph, 500, 300, __('others'), "", "", $config['font'], $config['fontsize'], $ttl);
+			echo "</div>";
+		}
 	}
 }
-
-if ($incident_graph){
-	echo "<h3>". __("Incident graph report")."</h3>";
-    echo "<div>";
-    echo pie3d_graph ($config['flash_charts'], $incident_graph, 500, 300, __('others'), "", "", $config['font'], $config['fontsize']);
-    echo "</div>";
-}
-
 
 ?>
 <script type="text/javascript" src="include/js/jquery.ui.datepicker.js"></script>
